syntax = "proto3";

option go_package = "github.com/urbanyeti/go-hero-game/server";

package gameworld;

service GameWorld {
	rpc GetRandomItem(ItemRequest) returns (Item) {}
}

message ItemRequest {
	int32 loop_number = 1;
	int32 level = 2;
}

message Item {
	bytes data = 1;
}